--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@
  * Random Quote Generator - CSS
  */
 
- @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i&display=swap');
 
 body {
   background-color: rgb(58, 193, 98);
@@ -77,13 +77,13 @@ h1 {
 }
 
 .quote:before {
-  content: "“";
+  content: '“';
   top: 0.1em;
   left: -0.5em;
 }
 
 .quote:after {
-  content: "”";
+  content: '”';
   bottom: -0.1em;
   margin-left: 0.1em;
   position: absolute;
@@ -98,7 +98,7 @@ h1 {
 }
 
 .source:before {
-  content: "—";
+  content: '—';
 }
 
 .citation {
@@ -106,13 +106,19 @@ h1 {
 }
 
 .citation:before {
-  content: ", ";
+  content: ', ';
   font-style: normal;
 }
 
 .year:before {
-  content: ", ";
+  content: ', ';
   font-style: normal;
+}
+
+.tag {
+  background-color: rgba(0, 0, 0, 0.1);
+  padding: 2px 5px;
+  border-radius: 5px;
 }
 
 @media (min-width: 768px) {
